--- a/Page.html
+++ b/Page.html
@@ -45,7 +45,7 @@
                 </div>
         
                 <div class="btn-group">
-                    <a href="resume.pdf" download class="btn">Download CV</a>
+                    <a href="resume.pdf" download class="btn">Download Resume</a>
                     <a href="#contact" class="btn">Contact</a>
                 </div>
             </div>
