--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="skills-box">
                     <div class="skills-info">
                         <h4>UX Design</h4>
-                        <p style="font-size: 1.5em;">Utilizing architectural and design expertise to create user-centric sketches, wireframes, storyboards, and prototypes. Familiar with tools such as Figma and Adobe XD through self-guided learning. Adept at collaborating with stakeholders to understand and translate requirements into meaningful design solutions, ensuring alignment with business and user goals.</p>
+                        <p style="font-size: 1.5em;">Utilizing architectural and design expertise to create user-centric sketches, and prototypes. Familiar with tools such as Figma through self-guided learning. Adept at collaborating with stakeholders to understand and translate requirements into design solutions.</p>
                     </div>
                 </div>
 
