--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="home-img">
-                <img src="Imeges/Image4.jpg" alt="Profile Image">
+                <img src="Image4.jpg" alt="Profile Image">
             </div>
         </section>
 
