--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         <!--home section-->
         <section class="home" id="home">
             <div class="home-content">
-                <h1>Hello, I'm <span>Christine</span></h1>
-                <h3 class="text-animation"> Seeking Opportunities as <span></span></h3>
+                <h1>
+                  Hello, I’m Christine — 
+                  <span class="animated-roles"></span>
+                </h1>
                 <p style="font-size: 1.7em;">Welcome to my portfolio! I'm a passionate Computer Science student specializing in AI and Machine Learning, with diverse interests in software development, user experience design, and data analysis.</p>
     
                 <div class="social-icons">
