--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
                 <div class="skills-box">
                     <div class="skills-info">
                         <h4>AI and Machine Learning</h4>
-                        <p style="font-size: 1.5em;">Passionate about AI technologies with a strong academic foundation in machine learning concepts. Currently expanding knowledge of frameworks like TensorFlow, Keras, and PyTorch through coursework and self-directed learning.</p>
+                        <p style="font-size: 1.5em;">Enthusiastic about AI, well‑grounded in machine learning fundamentals, and actively expanding knowledge of TensorFlow, Keras, and PyTorch through coursework and self‑learning.</p>
                     </div>
                 </div>
 
                 <div class="skills-box">
                     <div class="skills-info">
                         <h4>UX Design</h4>
-                        <p style="font-size: 1.5em;">Utilizing architectural and design expertise to create user-centric sketches, and prototypes. Familiar with tools such as Figma through self-guided learning. Adept at collaborating with stakeholders to understand and translate requirements into design solutions.</p>
+                        <p style="font-size: 1.5em;">Combined design expertise and self‑taught Figma skills to create user‑focused sketches and prototypes, effectively collaborating with stakeholders to deliver optimal solutions.</p>
                     </div>
                 </div>
 
