--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <!--home section-->
         <section class="home" id="home">
             <div class="home-content">
-                <h1>Hello, I'm <span>Christine</span></h1>
+                <h1 style="white-space: nowrap;">
+                  Hello, I'm <span>Christine</span>
+                </h1>                
                 <h3 class="text-animation"> <span></span></h3>
                 <p style="font-size: 1.7em;">Welcome to my portfolio! I'm a passionate Computer Science student specializing in AI and Machine Learning, with diverse interests in software development, user experience design, and data analysis.</p>
     
