--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
                   Hi, I'm <span>Christine</span>
                 </h1>                
                 <h3 class="text-animation"> <span></span></h3>
-                <p style="font-size: 1.7em;">Welcome to my portfolio! I'm a passionate Computer Science student specializing in AI and Machine Learning, with diverse interests in software development, user experience design, and data analysis.</p>
+                <p style="font-size: 1.7em;"> Welcome to my portfolio! I am a Computer Science student with a strong focus on 
+    <strong>backend and full-stack development</strong> and a growing interest in 
+    <strong>artificial intelligence and machine learning</strong>. 
+    Alongside my technical development skills, I bring experience in creating 
+    <strong>user-friendly interfaces</strong> and collaborating in cross-functional, 
+    Agile environments. I am passionate about building reliable, scalable, and 
+    innovative software solutions that bridge functionality with great user experience.</p>
     
                 <div class="social-icons">
                     <a href="https://linkedin.com/in/christine-abdelmesih" 
@@ -66,8 +72,8 @@
                         <h3>Bachelor of Computer Science</h3>
                         <p>Carleton University, Ottawa, Ontario</p>
                         <p style="font-size: 1.2em;">AI-Machine Learning Stream</p>
-                        <p style="font-size: 1.2em;">Third Year Student</p>
-                        <p style="font-size: 1.2em;">GPA 11.66/12 (A)</p>
+                        <p style="font-size: 1.2em;">Fourth Year Student</p>
+                        <p style="font-size: 1.2em;">GPA 11.10/12 (A)</p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -87,8 +93,9 @@
 
                 <div class="skills-box">
                     <div class="skills-info">
-                        <h4>Software Development</h4>
-                        <p style="font-size: 1.5em;"> Proficient in C++, C, Python, Java, JavaScript, HTML, and CSS. Developed academic projects utilizing these technologies, demonstrating expertise in object-oriented programming (OOP).</p>
+                        <h4>Backend & Cloud</h4>
+                        <p style="font-size: 1.5em;">Java, TypeScript, REST APIs, Docker, K9s, AWS. Hands-on experience deploying features to cloud environments,
+                        managing multi-repository dependencies, and collaborating via Git/Bitbucket/Jira with peer reviews and Copilot AI.</p>
                     </div>
                 </div>
 
@@ -101,15 +108,17 @@
 
                 <div class="skills-box">
                     <div class="skills-info">
-                        <h4>UX Design</h4>
-                        <p style="font-size: 1.5em;">Combined design expertise and self‑taught Figma skills to create user‑focused sketches and prototypes, effectively collaborating with stakeholders to deliver optimal solutions.</p>
+                        <h4>Frontend</h4>
+                        <p style="font-size: 1.5em;">JavaScript, HTML, CSS, Ember.js. Built and refined responsive interfaces and validation logic aligned with existing API
+                        behavior to improve usability and reliability.</p>
                     </div>
                 </div>
 
                 <div class="skills-box">
                     <div class="skills-info">
-                        <h4>Corporate Experience</h4>
-                        <p style="font-size: 1.5em;">Gained professional experience as an Architectural Assistant, developing problem-solving, project management, and teamwork skills in fast-paced, collaborative settings.</p>
+                        <h4>Software Engineering</h4>
+                        <p style="font-size: 1.5em;"> C++, Java, Python, OOP, data structures, debugging, and dependency management. Comfortable with Agile workflows,
+                        clear documentation, and cross-functional collaboration.</p>
                     </div>
                 </div>
 
@@ -162,3 +171,4 @@
         
 </body>
 </html>
+
