--- a/index.html
+++ b/index.html
@@ -30,13 +30,9 @@
                   Hi, I'm <span>Christine</span>
                 </h1>                
                 <h3 class="text-animation"> <span></span></h3>
-                <p style="font-size: 1.7em;"> Welcome to my portfolio! I am a Computer Science student with a strong focus on 
-    <strong>backend and full-stack development</strong> and a growing interest in 
-    <strong>artificial intelligence and machine learning</strong>. 
-    Alongside my technical development skills, I bring experience in creating 
-    <strong>user-friendly interfaces</strong> and collaborating in cross-functional, 
-    Agile environments. I am passionate about building reliable, scalable, and 
-    innovative software solutions that bridge functionality with great user experience.</p>
+                <p style="font-size: 1.7em;">Welcome to my portfolio! I’m a Computer Science student passionate about backend and full-stack development, 
+    with a growing interest in AI and machine learning. I also bring UI development experience, allowing me to 
+    build software that is both powerful and user-friendly.</p>
     
                 <div class="social-icons">
                     <a href="https://linkedin.com/in/christine-abdelmesih" 
@@ -171,4 +167,5 @@
         
 </body>
 </html>
+
 
