--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
                   Hi, I'm <span>Christine</span>
                 </h1>                
                 <h3 class="text-animation"> <span></span></h3>
-                <p style="font-size: 1.7em;">Welcome to my portfolio! I’m a Computer Science student passionate about backend and full-stack development, 
-    with a growing interest in AI and machine learning. I also bring UI development experience, allowing me to 
-    build software that is both powerful and user-friendly.</p>
+                <p style="font-size: 1.7em;">Welcome to my portfolio! I’m a Computer Science student passionate about backend and full-stack development,with a growing interest in AI and machine learning. I also bring UI development experience, allowing me to build software that is both powerful and user-friendly.</p>
     
                 <div class="social-icons">
                     <a href="https://linkedin.com/in/christine-abdelmesih" 
@@ -167,5 +165,6 @@
         
 </body>
 </html>
+
 
 
